# cursor-mcp-response-proxy

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/cursor_mcp_response_proxy/: __init__.py  __main__.py  config.py  proxy.py  response_handler.py  storage.py  transports.py
tests/: test_config.py  test_cross_platform.py  test_response_handler.py  test_stdio_proxy.py  test_transports.py
tests/fixtures/: stdio_upstream_server.py
